// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the InputCheckbox component renders the same as last time 1`] = `
<div
  className="input-wrapper"
>
  <label
    htmlFor="This is a name"
  >
    This is a label
  </label>
  <input
    checked={false}
    name="This is a name"
    type="checkbox"
    value="false"
  />
</div>
`;

exports[`the InputText component renders the same as last time 1`] = `
<div
  className="input-wrapper"
>
  <label
    htmlFor="This is a name"
  >
    This is a label
  </label>
  <input
    name="This is a name"
    type="text"
    value="This is a value"
  />
</div>
`;
